--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 </head>
 <meta charset="utf-8">
-<button onclick="test()">test</button>
+<button onclick="test()" style="font-size:100px;">test</button>
 
 
 <script src="RunnerMountain.js"></script>
