--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 </head>
 <meta charset="utf-8">
-<button onclick="test()" style="font-size:100px;">計測開始</button>
+<button onclick="test()" style="font-size:100px;">計測開始</button><br>
 <font size="7">現在のポイント:<span id="RunPt1"></span></font>
 <script src="RunnerMountain.js"></script>
 
