--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 </head>
 <meta charset="utf-8">
 <button onclick="test()" style="font-size:100px;">計測開始</button><br>
-<font size="7">現在のポイント:<span id="RunPt1"></span></font>
+<font size="7">現在のポイント:<span id="RunPt1"></span></font><br>
+<button onclick="stopKeisoku()" style="font-size:100px;">計測終了</button><br>
 <script src="RunnerMountain.js"></script>
 
 </html>
