--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <br>
     <li><a class="Tablink" href="#pageHanaZukan">花図鑑</a></li>
     <br>
+    <li><a class="Tablink" href="#pageClearStorage">データ初期化</a></li>
   </ul>
 <hr>
 
@@ -35,12 +36,19 @@
     <!-- 花図鑑タブ -->    
 	<div id="pageHanaZukan" class="TabPage">
 	<h2>
-	見つけた花の数:<span id="detectedHanaCount1"></span><br>
+	見つけた花の数:<span id="detectedHanaCount1"></span>/9<br>
 	花一覧
 	<h2>
 	<h2 id="hanaZukan1">
 	</h2>
     </div>
+    
+    <!-- データ初期化タブ -->
+	<div id="pageClearStorage" class="TabPage">
+	<button onclick="clearStorage()" style="font-size:100px;">データ初期化</button><br>
+    </div>
+        
+  </div>
 
 
 
